--- a/.github/workflows/test_yarn.yml
+++ b/.github/workflows/test_yarn.yml
@@ -2,10 +2,10 @@ on:
   workflow_call:
   workflow_dispatch:
 
-name: unit_tests
+name: test_yarn
 
 jobs:
-  unit_tests:
+  test_yarn:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
