--- a/.github/workflows/pushmain.yml
+++ b/.github/workflows/pushmain.yml
@@ -20,8 +20,8 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build_test_release_tag:
-    uses: ./.github/workflows/build_test_release_tag.yml
+  bld_test_rel_tag:
+    uses: ./.github/workflows/bld_test_rel_tag.yml
     secrets: inherit # pass all secrets for pushing
     with:
       # NOTE: passing in a specific branch means that commits made during the pipeline before the final build is completed will be included
