--- a/.github/workflows/bld_yarn.yml
+++ b/.github/workflows/bld_yarn.yml
@@ -1,5 +1,4 @@
 name: bld_yarn
-run-name: bld-{{ inputs.artifact_name }}
 
 permissions:
   checks: write
@@ -25,6 +24,13 @@ on:
 
 jobs:
   bld_yarn:
+    strategy:
+      matrix:
+        include:
+          - artifact_name: prod
+          - artifact_name: sandbox
+          - artifact_name: qa
+          - artifact_name: int
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
