--- a/.github/workflows/bld_docker.yml
+++ b/.github/workflows/bld_docker.yml
@@ -133,15 +133,7 @@ jobs:
           bump: ${{ inputs.bump }}
 
       - uses: docker/setup-buildx-action@v3
-      - uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          # each cache needs a unique key for the job
-          key: ${{ runner.os }}-buildx-${{ hashFiles(inputs.context) }}
-          # Alternative restore keys if no exact match is found
-          # I /think/ this means that other docker buildx jobs could help out here
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+
       - name: Login to private registry
         uses: docker/login-action@v3
         with:
@@ -164,8 +156,8 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_REG_PRIVATE }}/${{ matrix.docker_name}}:${{ steps.version.outputs.version_tag_numeric }}
           context: ${{ inputs.context }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           build-args: ${{ matrix.build_args }}
           file: ${{ steps.dynamic_defaults.outputs.default_file }}
 
