add some timeouts

--- a/.github/workflows/bld_docker.yml
+++ b/.github/workflows/bld_docker.yml
@@ -110,6 +110,7 @@ jobs:
             file: Dockerfile.build
 
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - name: git-checkout-ref-action
         id: ref
