--- a/.github/workflows/bld_yarn.yml
+++ b/.github/workflows/bld_yarn.yml
@@ -32,6 +32,7 @@ jobs:
           - artifact_name: qa
           - artifact_name: int
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
