--- a/.github/workflows/test_yarn.yml
+++ b/.github/workflows/test_yarn.yml
@@ -7,6 +7,7 @@ name: test_yarn
 jobs:
   test_yarn:
     runs-on: ubuntu-22.04
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
