--- a/Dockerfile.build.yarn
+++ b/Dockerfile.build.yarn
@@ -1,4 +1,5 @@
-FROM node:20.15.0-bullseye AS build
+FROM node:20.15.0-alpine AS build
+# FROM node:20.15.0-bullseye AS build
 
 ARG build_env
 
@@ -10,11 +11,15 @@ RUN yarn install --verbose
 
 COPY . .
 
+RUN apk add gettext
+
 RUN yarn build:${build_env} --verbose
 
 FROM nginx:1.26.2-alpine
 
-COPY --from=build /app/* /usr/share/nginx/html
+RUN mkdir -p /usr/share/nginx/html/orcid-web-frontend
+
+COPY --from=build /app/dist/ /usr/share/nginx/html/orcid-web-frontend/
 
 EXPOSE 80
 
