--- a/Dockerfile.build.yarn
+++ b/Dockerfile.build.yarn
@@ -9,7 +9,11 @@ COPY package.json .
 
 RUN yarn install --verbose
 
-COPY . .
+COPY *.json .
+
+COPY src/ src/
+
+COPY scripts/ scripts/
 
 RUN apk add gettext
 
@@ -18,6 +22,8 @@ RUN yarn build:${build_env} --verbose
 FROM nginx:1.26.2-alpine
 
 RUN mkdir -p /usr/share/nginx/html/orcid-web-frontend
+
+COPY ./nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=build /app/dist/ /usr/share/nginx/html/orcid-web-frontend/
 
