--- a/.github/workflows/bld_docker.yml
+++ b/.github/workflows/bld_docker.yml
@@ -107,11 +107,11 @@ jobs:
 #             docker_name: orcid/registry/orcid-web-frontend-sandbox
 #             build_args: "build_env=sandbox"
 #             file: Dockerfile.build.yarn
-# 
-#           - artifact_name: qa
-#             docker_name: orcid/registry/orcid-web-frontend-qa
-#             build_args: "build_env=qa"
-#             file: Dockerfile.build.yarn
+
+          - artifact_name: qa
+            docker_name: orcid/registry/orcid-web-frontend-qa
+            build_args: "build_env=qa"
+            file: Dockerfile.build.yarn
 
           - artifact_name: int
             docker_name: orcid/registry/orcid-web-frontend-int
