--- a/.github/workflows/bld_docker.yml
+++ b/.github/workflows/bld_docker.yml
@@ -98,15 +98,15 @@ jobs:
     strategy:
       matrix:
         include:
-#           - artifact_name: prod
-#             docker_name: orcid/registry/orcid-web-frontend-prod
-#             build_args: "build_env=prod"
-#             file: Dockerfile.build.yarn
-# 
-#           - artifact_name: sandbox
-#             docker_name: orcid/registry/orcid-web-frontend-sandbox
-#             build_args: "build_env=sandbox"
-#             file: Dockerfile.build.yarn
+          - artifact_name: prod
+            docker_name: orcid/registry/orcid-web-frontend-prod
+            build_args: "build_env=prod"
+            file: Dockerfile.build.yarn
+
+          - artifact_name: sandbox
+            docker_name: orcid/registry/orcid-web-frontend-sandbox
+            build_args: "build_env=sandbox"
+            file: Dockerfile.build.yarn
 
           - artifact_name: qa
             docker_name: orcid/registry/orcid-web-frontend-qa
