--- a/Dockerfile.build.yarn
+++ b/Dockerfile.build.yarn
@@ -1,4 +1,5 @@
-FROM node:20.15.0-alpine AS build
+#FROM node:20.15.0-alpine AS build
+FROM node:18.7.0-bullseye
 
 ARG build_env
 
@@ -14,7 +15,7 @@ COPY src/ src/
 
 COPY scripts/ scripts/
 
-RUN apk add gettext
+# RUN apk add gettext
 
 RUN yarn build:${build_env}
 
