--- a/Dockerfile.build.yarn
+++ b/Dockerfile.build.yarn
@@ -1,5 +1,5 @@
 #FROM node:20.15.0-alpine AS build
-FROM node:18.7.0-bullseye
+FROM node:18.7.0-bullseye AS build
 
 ARG build_env
 
@@ -20,6 +20,7 @@ COPY scripts/ scripts/
 RUN yarn build:${build_env}
 
 FROM nginx:1.26.2-alpine
+#FROM nginx:1.26.2-bookworm
 
 RUN mkdir -p /usr/share/nginx/html/orcid-web-frontend
 
