--- a/Dockerfile.build.yarn
+++ b/Dockerfile.build.yarn
@@ -1,5 +1,6 @@
 #FROM node:20.15.0-alpine AS build
-FROM node:18.19.1-bullseye AS build
+#FROM node:18.19.1-bullseye AS build
+FROM node:22.11.0-bullseye AS build
 #FROM node:16.14.0-bullseye AS build
 
 ARG build_env
